# cygnet-py

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
listings/: listing_2-3.c
src/cygnet/: codegen.py  driver.py  emitter.py  enums.py  errors.py  lexer.py  main.py  parser.py  print.py  tackygen.py  tokens.py
